--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,23 @@
     <string name="tasks_display">Tasks Display</string>
     <string name="add_task">Add Task</string>
 
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+
     <string name="task">Task</string>
     <string name="description">Description</string>
+    <string name="due_date">Due Date</string>
+    <string name="color_tag">Highlight</string>
     <string name="enter_task_name">enter task name</string>
     <string name="save">Save</string>
     <string name="delete">Delete</string>
+    <string name="delete_all">Delete All</string>
+
+    <!-- colors -->
+    <string name="red">red</string>
+    <string name="orange">orange</string>
+    <string name="blue">blue</string>
+    <string name="purple">purple</string>
 
     <!-- Toast Strings -->
     <string name="task_name_cannot_be_empty">task name cannot be empty</string>
@@ -16,6 +28,7 @@
     <string name="task_not_marked_try_again">task is not marked, try again later</string>
     <string name="task_not_deleted_try_again">task is not deleted, try again later</string>
     <string name="task_deleted">Task: \'%s\' is deleted</string>
+    <string name="all_task_deleted">All tasks are deleted</string>
     <string name="task_completed">Task: \'%s\' is completed</string>
     <string name="task_ongoing">Task: \'%s\' is ongoing</string>
     <string name="other_error">an error occurred somewhere</string>
